first milestone done

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,12 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body><div id="app"><%= initialContent -%></div>
-        <%= Math.random() -%>
-        
-
-        <script src="main.js"></script>
-        
-   
+<body>
+    <div id="app"><%= initialContent -%></div>
+    <script src="main.js"></script>
 </body>
 </html>
